# openpass

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  gunicorn_config.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  wsgi.py
.github/: feature_request.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
blueprints/: __init__.py
blueprints/admin/: __init__.py  admin.py  members_import.py
blueprints/auth/: auth.py  email.py  oauth.py
blueprints/cards/: __init__.py  cards.py  helpers.py  photo.py
blueprints/main/: main.py
branding/: branding.json  manifest.json
core/: branding.py  config.py  context_processors.py  extensions.py  loggers.py  middleware.py  oauth_client.py  token_manager.py
docs/: ADMIN.md  BRANDING.md  DEPLOYMENT.md  INSTALLATION.md  KONFIGURATION.md  OPENPASS.md  TAILWIND.md  TESTING.md
instance/: admin-members.csv  admin_members.db
static/: serviceworker.js
templates/: base.html  email_sent.html  expired.html  login.html  member_card.html  member_editor_form.html  member_editor_partial.html  members_import_preview.html  members_import_preview_partial.html  members_list_partial.html  members_manage.html  members_sync_preview_partial.html  qr_card.html  rate_limited.html  terms.html  upload_members.html  upload_photo.html
tests/: conftest.py  test_admin_functions.py  test_auth.py  test_email_functions.py  test_member_card.py  test_oauth_routes.py  test_photo_functions.py  test_qr_card_auth.py
utils/: email_utils.py
(+25 files in other folders)
