[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rcb-ausweis"
version = "0.9.0"
description = "Mitgliedsausweis-App des Radtreff Campus Bonn e.V."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name="Florian Mösch", email="florian@radtreffcampus.de" }
]

dependencies = [
  "flask",
  "flask-login",
  "flask-wtf",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
